# transcribe_w2v

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
w2vtranscriber/: __init__.py  transcription_pipeline.py
