[metadata]
name = w2vtranscriber
version = 0.0.4.4
[options]
packages = w2vtranscriber
install_requires =
    argparse
    pandas
    librosa
    pympi-ling
    srt
    speechbrain
    transformers
    pyctcdecode
    torch
[options.entry_points]
console_scripts =
    cli-name = w2vtranscriber.transcription_pipeline:main